<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">X-Battery Stats Colors</string>
    <string name="app_short">XBSC</string>
    <string name="module_description">Xposed Module that allows you to change the color of your Battery Stats Graph in Settings app.</string>
    <string name="btn_enable">Enable</string>
    <string name="btn_disable">Disable</string>
    <string name="btn_log_on">On</string>
    <string name="btn_log_off">Off</string>
    <string name="btn_battery">According to Battery</string>
    <string name="btn_apply">Apply</string>
    <string name="edt_hint">Color</string>
    <string name="toast_success">Color change successful</string>
    <string name="toast_invalid">Not a valid hex code</string>
    <string name="toast_noactivity">Required application not found!</string>
    <string name="intro_text">Battery Graph Color:</string>
    <string name="new_graph">New Graph</string>
    <string name="old_graph">Current Graph</string>
    <string name="transparency">Transparency</string>
    <string name="battery">Battery</string>
    <string name="normal">Normal</string>
    <string name="module_control">Module Control</string>
    <string name="battery_intro">Choose Colors for different Battery Levels</string>
    <string name="perc_100">100%-60%</string>
    <string name="perc_60">59%-30%</string>
    <string name="perc_30">29%-15%</string>
    <string name="perc_15">14%-0%</string>
    <string name="diag_title">Pick a Color:</string>
    <string name="battery_mode">Current Mode : Battery</string>
    <string name="normal_mode">Current Mode : Normal</string>
    <string name="menu_more">More</string>
    <string name="menu_disable_module">Disable Module</string>
    <string name="menu_enable_module">Enable Module</string>
    <string name="menu_disable_logs">Disable Logs</string>
    <string name="menu_enable_logs">Enable Logs</string>
    <string name="menu_about">About</string>
    <string name="menu_graph">Graph</string>
    <string name="about_module">About Module</string>
    <string name="about_module_text">X-Battery Stats Colors (XBSC, in short) is a Module that allows you to change the color of Battery Graph in Settings application. You can either choose Normal mode and apply whatever color you want to the Battery Graph, or you can choose Battery Mode and let the module change the graph according to the battery level, while your chosen transparency retains. You can also choose the colors for different battery levels.</string>
    <string name="developed_by">Developed by</string>
    <string name="iamareebjamal">iamareebjamal</string>
    <string name="source">Source</string>
    <string name="github">GitHub</string>
    <string name="other">Other Links</string>
    <string name="xda_thread">XDA Thread</string>
    <string name="xposed">Xposed Repo</string>
    <string name="contact">Contact me on:</string>
    <string name="facebook">Facebook</string>
    <string name="xda">XDA</string>
    <string name="gplus">Google +</string>
    <string name="twitter">Twitter</string>

</resources>
