<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#333333"
    android:padding="10dp"
    android:orientation="vertical" >
    
    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:textColor="#ff33b5e5"
        android:text="@string/about_module" />
    
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/about_module_text" />
    
    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:textColor="#ff33b5e5"
        android:text="@string/developed_by" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/iamareebjamal"
        android:onClick="iamareebjamal"
        android:padding="10dp" />
    
    </LinearLayout>
    
    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:textColor="#ff33b5e5"
        android:text="@string/source" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/github"
        android:onClick="github"
        android:padding="10dp" />
    
    </LinearLayout>
    
    
    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:textColor="#ff33b5e5"
        android:text="@string/other" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/xda"
        android:onClick="xda"
        android:padding="10dp" />
    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/xposed"
        android:onClick="xposed"
        android:padding="10dp" />
    
    </LinearLayout>
    

</LinearLayout>

</ScrollView>
