<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    android:orientation="vertical" >
    
    <LinearLayout
            android:id="@+id/modeLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffff5858"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:id="@+id/modeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery_mode"
                android:textColor="#ffffff" />
        </LinearLayout>
    
    <ScrollView
        android:clipToPadding="false"
    	android:fitsSystemWindows="true"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10dp" >

        <RelativeLayout
            android:id="@+id/batteryLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textColor="#cccccc"
                android:text="@string/battery_intro" />

            <LinearLayout
                android:id="@+id/linearLayoutx"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="36dp"
                android:baselineAligned="false"
                android:gravity="center" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/layout100"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="#ffffff"
                        android:gravity="center_vertical"
                        android:orientation="vertical" >
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="#cccccc"
                        android:text="@string/perc_100" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/layout60"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="#ffffff"
                        android:gravity="center_vertical"
                        android:orientation="vertical" >
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="#cccccc"
                        android:text="@string/perc_60" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/layout30"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="#ffffff"
                        android:gravity="center_vertical"
                        android:orientation="vertical" >
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="#cccccc"
                        android:text="@string/perc_30" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/layout15"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="#ffffff"
                        android:gravity="center_vertical"
                        android:orientation="vertical" >
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="#cccccc"
                        android:text="@string/perc_15" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayoutx"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/buttonApply"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_apply" />

                <ImageView
                    android:id="@+id/buttonUndo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/hello"
                    android:src="@drawable/undo" />
            </LinearLayout>


        </RelativeLayout>
        
        </ScrollView>
    

</LinearLayout>
