<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    android:orientation="vertical" >
    
    <LinearLayout
            android:id="@+id/modeLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ff33b5e5"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:id="@+id/modeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal_mode"
                android:textColor="#ffffff" />
        </LinearLayout>
        
        <ScrollView
        android:id="@+id/scrollView"
        android:clipToPadding="false"
    	android:fitsSystemWindows="true"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/normalLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/ET2"
                    style="@style/EditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:textColor="#cccccc"
                    android:textColorHint="#888888"
                    android:padding="5dp" />

                <EditText
                    android:id="@+id/ET1"
                    style="@style/EditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:hint="@string/edt_hint"
                    android:textColor="#cccccc"
                    android:textColorHint="#888888"
                    android:padding="5dp" />

                <ImageView
                    android:id="@+id/colorButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/hello"
                    android:src="@drawable/color" />

                <ImageView
                    android:id="@+id/previewButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/hello"
                    android:src="@drawable/done" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/transparency"
                    android:textColor="#cccccc"
                    android:textSize="15sp" />

                <SeekBar
                    android:id="@+id/seekBar1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="255"
                    android:progressDrawable="@drawable/scrubber_progress_horizontal_holo_dark"
                    android:thumb="@drawable/scrubber_control_selector_holo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#cccccc"
                        android:text="@string/old_graph" />

                    <LinearLayout
                        android:id="@+id/oldTopLine"
                        android:layout_width="fill_parent"
                        android:layout_height="3dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:background="#ffffff"
                        android:orientation="horizontal" >
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/oldGraph"
                        android:layout_width="fill_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="#99ffffff"
                        android:orientation="horizontal" >
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#cccccc"
                        android:text="@string/new_graph" />

                    <LinearLayout
                        android:id="@+id/newTopLine"
                        android:layout_width="fill_parent"
                        android:layout_height="3dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:background="#00ffffff"
                        android:orientation="horizontal" >
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/newGraph"
                        android:layout_width="fill_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="#00ffffff"
                        android:orientation="vertical" >
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/applyButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="btn"
                android:text="@string/btn_apply" />
        </LinearLayout>
        
        </ScrollView>
    

</LinearLayout>
